--- a/js/package.json
+++ b/js/package.json
@@ -3,6 +3,7 @@
     "version": "2.2.4-SNAPSHOT",
     "description": "Connects a web client to the QZ Tray software.  Enables printing and device communication from javascript. ",
     "main": "qz-tray.js",
+    "types": "qz-tray.d.ts",
     "browser": {
         "path": false
     },
