add arch to plist

--- a/ant/apple/apple-bundle.plist.in
+++ b/ant/apple/apple-bundle.plist.in
@@ -20,5 +20,9 @@
                 <key>CFBundleURLSchemes</key>
                 <array><string>${vendor.name}</string></array>
             </dict>
-        </array>
+        </array>        
+    <key>LSArchitecturePriority</key>
+    <array>
+        <string>${apple.target.arch}</string>
+    </array>
 </dict></plist>
