Fix Rossetta Prompt Bug on Apple Silicon (#1286)
Inform macOS about the main binary's architecture

--- a/ant/apple/apple-bundle.plist.in
+++ b/ant/apple/apple-bundle.plist.in
@@ -21,4 +21,8 @@
                 <array><string>${vendor.name}</string></array>
             </dict>
         </array>
+    <key>LSArchitecturePriority</key>
+    <array>
+        <string>${apple.target.arch}</string>
+    </array>
 </dict></plist>
