--- a/ant/project.properties
+++ b/ant/project.properties
@@ -35,8 +35,8 @@ java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 
 # Java vendor to bundle into software (e.g. "*BellSoft|Adoptium|Microsoft|Amazon|IBM")
 jlink.java.vendor="BellSoft"
-# Java vendor to bundle into software (e.g. "21.0.1+12")
-jlink.java.version="21.0.1+12"
+# Java vendor to bundle into software (e.g. "11.0.17+7")
+jlink.java.version="11.0.25+11
 # Java garbage collector flavor to use (e.g. "hotspot|openj9")
 jlink.java.gc="hotspot"
 # Java garbage collector version to use (e.g. openj9: "0.35.0", zulu: "11.62.17")
