--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
       - run: echo "Setting CA trust settings to 'allow' (https://github.com/actions/runner-images/issues/4519)"
       - run: security authorizationdb read com.apple.trust-settings.admin > /tmp/trust-settings-backup.xml
       - run: sudo security authorizationdb write com.apple.trust-settings.admin allow
-      - sudo -E installer -pkg out/qz-tray-*.pkg -target /
+      - run: sudo -E installer -pkg out/qz-tray-*.pkg -target /
       - run: echo "Restoring CA trust settings back to default"
       - run: sudo security authorizationdb write com.apple.trust-settings.admin < /tmp/trust-settings-backup.xml
       - run: "'/Applications/QZ Tray.app/Contents/MacOS/QZ Tray' --version"
