Revert the JAVA_HOME insanity I guess we already handle this gracefully

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,8 @@ jobs:
           distribution: 'liberica'
       - run: sudo apt-get install nsis makeself
       - run: ant makeself
-      - run: unset JAVA_HOME && sudo -E out/qz-tray-*.run
-      - run: unset JAVA_HOME && /opt/qz-tray/qz-tray --version
+      - run: sudo out/qz-tray-*.run
+      - run: /opt/qz-tray/qz-tray --version
       - run: ant nsis
 
   macos:
@@ -36,10 +36,10 @@ jobs:
       - run: echo "Setting CA trust settings to 'allow' (https://github.com/actions/runner-images/issues/4519)"
       - run: security authorizationdb read com.apple.trust-settings.admin > /tmp/trust-settings-backup.xml
       - run: sudo security authorizationdb write com.apple.trust-settings.admin allow
-      - run: unset JAVA_HOME && sudo -E installer -pkg out/qz-tray-*.pkg -target /
+      - run: sudo installer -pkg out/qz-tray-*.pkg -target /
       - run: echo "Restoring CA trust settings back to default"
       - run: sudo security authorizationdb write com.apple.trust-settings.admin < /tmp/trust-settings-backup.xml
-      - run: "unset JAVA_HOME && '/Applications/QZ Tray.app/Contents/MacOS/QZ Tray' --version"
+      - run: "'/Applications/QZ Tray.app/Contents/MacOS/QZ Tray' --version"
       - run: ant makeself
       - run: ant nsis
 
@@ -56,5 +56,5 @@ jobs:
           distribution: 'liberica'
       - run: choco install nsis
       - run: ant nsis
-      - run: Remove-Item Env:\JAVA_HOME; Start-Process -Wait ./out/qz-tray-*.exe -ArgumentList "/S"
-      - run: "Remove-Item Env:\JAVA_HOME; &'C:/Program Files/QZ Tray/qz-tray.exe' --wait --version|Out-Null"
+      - run: Start-Process -Wait ./out/qz-tray-*.exe -ArgumentList "/S"
+      - run: "&'C:/Program Files/QZ Tray/qz-tray.exe' --wait --version|Out-Null"
