Squash PR for fixing conflicts with upstream ivy branch (#7)
Initial ivy support (squashed)

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -20,6 +20,9 @@ out.dir=${basedir}/out
 build.dir=${out.dir}/build
 dist.dir=${out.dir}/dist
 
+lib.dir=${basedir}/deps
+ivy.lib.dir=${lib.dir}/ivy
+manual.lib.dir=${lib.dir}/manual
 sign.lib.dir=${out.dir}/jar-signed
 
 jar.compress=true
@@ -46,10 +49,6 @@ jlink.java.gc.version="gc-ver-is-empty"
 
 # Skip bundling the java runtime
 # jre.skip=true
-
-# JavaFX version
-javafx.version=19_monocle
-javafx.mirror=https://download2.gluonhq.com/openjfx
 
 # Provisioning
 provision.file=${basedir}/provision.json
