--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 /out/
 /js/node_modules
-/lib/javafx*
+/lib/*
+/deps/*
+!/deps/manual/
 /.idea/workspace.xml
 /.idea/misc.xml
 /.idea/uiDesigner.xml
 /.idea/compiler.xml
+/reports/
 /fx.zip
 /README.md
 /provision.json
