--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -1,19 +1,30 @@
 # Dependency versions
-bouncycastle.version=1.79
+#darcula.version=0.0.0
+bouncycastle.version=1.80
 hid4java.version=0.8.0
 icu4j.version=76.1
 jaiimageio.version=1.4.0
 javafx.version=24-headless+0-2024-12-02-101029
-javasemver.version=0.9.0
-jettison.version=1.5.4
+#javasemver.version=0.9.0
+#jettison.version=1.5.4
 jetty.version=10.0.24
 jna.version=5.15.0
 jssc.version=2.9.6
+libusb4java.version=1.2.0
 log4j.version=2.24.2
+#mslinks.version=1.1.0
 pdfbox.version=2.0.32
 purejavahidapi.version=0.0.10
+servlet-api.version=4.0.6
 twelvemonkeys.version=3.12.0
+usb-api.version=1.0.2
 usb4java.version=1.2.0
+websocket-api.version=1.1
+
+commons-codec.version=1.18.0
+commons-io.version=2.18.0
+commons-pool2.version=2.12.1
+commons-ssl.version=0.3.20
 
 # General configuration
 ivy.report.todir=${basedir}/reports
