--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,19 @@
             </and>
         </condition>
 
+        <!-- Handle codesign.mac backwards-compatible shim (for cherry-pick) -->
+        <condition property="codesign.mac" value="true">
+            <and>
+                <or>
+                    <isset property="target.os.mac"/>
+                    <isset property="target.platform.mac"/>
+                </or>
+                <or>
+                    <isset property="signing.tsaurl"/>
+                    <isset property="hsm.storetype"/>
+                </or>
+            </and>
+        </condition>
         <echo message="Building ${project.filename} using JDK ${ant.java.version}"/>
     </target>
 
