Throw error when provisioning.file is provided but not found.

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -52,7 +52,7 @@ javafx.version=19_monocle
 javafx.mirror=https://download2.gluonhq.com/openjfx
 
 # Provisioning
-provision.file=${basedir}/provision.json
+# provision.file=${basedir}/provision.json
 provision.dir=${dist.dir}/provision
 
 # Mask tray toggle (Apple only)
