--- a/build.xml
+++ b/build.xml
@@ -273,7 +273,7 @@
         </copy>
 
         <!-- Handle sample.html renaming -->
-        <property description="suppress-property-warning" name="sample.name" value="sample.html"/>
+        <property description="suppress property warning" name="sample.name" value="sample.html"/>
         <move file="${demo.dir}/sample.html" tofile="${demo.dir}/${sample.name}"/>
     </target>
 
@@ -281,13 +281,11 @@
         <echo level="warn">The "include-assets" task is deprecated, please use "build-demo" instead.</echo>
     </target>
 
-    <target name="check-provision">
+    <target name="check-provision" if="provision.file">
+        <property description="suppress-property-warning" name="provision.file" value=""/>
         <available file="${provision.file}" property="provision.file.exists"/>
-        <condition property="provision.message" value="Found provision file '${provision.file}' calling 'provision --json [...]'">
-            <isset property="provision.file.exists"/>
-        </condition>
-        <property description="Fallback value" name="provision.message" value="Skipping provisioning, '${provision.file}' does not exist."/>
-        <echo level="info">${provision.message}</echo>
+        <fail message="Provision file was provided but not found: '${provision.file}'" unless="provision.file.exists"/>
+        <echo level="info">Found provision file '${provision.file}' calling 'provision --json [...]'</echo>
     </target>
 
     <target name="clean-provision" depends="check-provision" unless="skip.clean.provision">
