Calculate jar algorithms

--- a/ant/private/private.properties
+++ b/ant/private/private.properties
@@ -2,3 +2,4 @@ signing.alias=self-signed
 signing.keystore=ant/private/qz.ks
 signing.keypass=jzebraonfire
 signing.storepass=jzebraonfire
+signing.algorithm=SHA-256
