--- a/ant/private/private.properties
+++ b/ant/private/private.properties
@@ -1,4 +1,5 @@
-signing.alias=jzebra
+signing.alias=self-signed
 signing.keystore=ant/private/qz.ks
 signing.keypass=jzebraonfire
 signing.storepass=jzebraonfire
+signing.algorithm=SHA-256
