Change to snapshot version

--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
     "name": "qz-tray",
-    "version": "2.2.5",
+    "version": "2.2.6-SNAPSHOT",
     "description": "Connects a web client to the QZ Tray software.  Enables printing and device communication from javascript. ",
     "main": "qz-tray.js",
     "browser": {
