--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -1,19 +1,19 @@
 # Dependency versions
 #darcula.version=0.0.0
-bouncycastle.version=1.80
-hid4java.version=0.8.0
-icu4j.version=76.1
+bouncycastle.version=1.82
+#hid4java.version=0.8.0
+icu4j.version=77.1
 jaiimageio.version=1.4.0
 javafx.version=25-headless+0-2025-02-28-100038
 #javasemver.version=0.9.0
 #jettison.version=1.5.4
-jetty.version=10.0.24
-jna.version=5.15.0
-jssc.version=2.9.6
+jetty.version=10.0.26
+jna.version=5.18.1
+jssc.version=2.10.2
 libusb4java.version=1.2.0
-log4j.version=2.24.2
+log4j.version=2.25.2
 #mslinks.version=1.1.0
-pdfbox.version=2.0.32
+pdfbox.version=2.0.35
 purejavahidapi.version=0.0.10
 servlet-api.version=4.0.6
 twelvemonkeys.version=3.12.0
@@ -21,8 +21,8 @@ usb-api.version=1.0.2
 usb4java.version=1.2.0
 websocket-api.version=1.1
 
-commons-codec.version=1.18.0
-commons-io.version=2.18.0
+commons-codec.version=1.19.0
+commons-io.version=2.20.0
 commons-pool2.version=2.12.1
 commons-ssl.version=0.3.20
 
