Move jsign to ivy too, cleanup icu4j

--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -7,6 +7,7 @@ jaiimageio.version=1.4.0
 javafx.version=25-headless+0-2025-02-28-100038
 #javasemver.version=0.9.0
 #jettison.version=1.5.4
+jbig2.version=3.0.4
 jetty.version=10.0.26
 jna.version=5.18.1
 jssc.version=2.10.2
@@ -25,6 +26,9 @@ commons-codec.version=1.19.0
 commons-io.version=2.20.0
 commons-pool2.version=2.12.1
 commons-ssl.version=0.3.20
+
+# Dependency versions for ant only
+jsign.version=7.3
 
 # General configuration
 ivy.report.todir=${basedir}/reports
