--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
     <!-- Add Ivy Tasks -->
     <taskdef uri="antlib:org.apache.ivy.ant" resource="org/apache/ivy/ant/antlib.xml">
         <classpath>
-            <fileset dir="${basedir}/ant/lib/">
+            <fileset dir="ant/deps/manual">
                 <include name="ivy*.jar"/>
             </fileset>
         </classpath>
@@ -37,11 +37,19 @@
         <ivy:cleancache/>
     </target>
 
-    <target name="ivy-deps" depends="platform-detect,clean-ivy-cache">
+    <!-- Libraries to be bundled with the main application -->
+    <target name="ivy-deps" depends="platform-detect,clean-ivy-cache,ivy-ant-deps">
         <ivy:settings file="ant/ivy-settings.xml"/>
         <ivy:resolve file="ant/ivy.xml"/>
         <ivy:report/>
         <ivy:retrieve pattern="${ivy.lib.dir}/[artifact]-[revision](-[classifier]).[ext]" sync="true"/>
+    </target>
+
+    <!-- Libraries used solely by ant -->
+    <target name="ivy-ant-deps" depends="clean-ivy-cache">
+        <ivy:settings file="ant/ivy-settings.xml"/>
+        <ivy:resolve file="ant/deps/ivy-ant.xml"/>
+        <ivy:retrieve pattern="ant/deps/ivy/[artifact]-[revision](-[classifier]).[ext]" sync="true"/>
     </target>
 
     <target name="quick-clean">
@@ -154,6 +162,38 @@
             </fileset>
         </delete>
 
+        <!-- Remove unused files from icu4j (saves about 10 MB) -->
+        <!-- See also https://github.com/qzind/tray/pull/339#issuecomment-404385229 -->
+        <delete failonerror="false">
+            <fileset dir="${out.dir}/libs-temp">
+                <!-- icu4j -->
+                <include name="**/brkitr/*.brk"/>
+                <include name="**/brkitr/*.dict"/>
+                <include name="**/col/ucadata.icu"/>
+                <include name="**/icudata/unames.icu"/>
+                <include name="**/icudata/*.spp"/>
+                <include name="**/icudata/**/*.res"/>
+                <exclude name="**/icudata/**/en*.res"/>
+                <exclude name="**/icudata/**/ar*.res"/>
+
+                <!-- icu4j-charset -->
+                <include name="**/icudata/*cns-11643-1992.cnv*"/>
+                <include name="**/icudata/*ebcdic-xml-us.cnv*"/>
+                <include name="**/icudata/*euc-jp-2007.cnv*"/>
+                <include name="**/icudata/*euc-tw-2014.cnv*"/>
+                <include name="**/icudata/*gb18030.cnv*"/>
+                <include name="**/icudata/*ibm-1363_P11B-1998.cnv*"/>
+                <include name="**/icudata/*ibm-1364_P110-2007.cnv*"/>
+                <include name="**/icudata/*ibm-1371_P100-1999.cnv*"/>
+                <include name="**/icudata/*ibm-1373_P100-2002.cnv*"/>
+                <include name="**/icudata/*ibm-1375_P100-2008.cnv*"/>
+                <include name="**/icudata/*ibm-1383_P110-1999.cnv*"/>
+                <include name="**/icudata/*ibm-1386_P100-2001.cnv*"/>
+                <include name="**/icudata/*ibm-1388_P103-2001.cnv*"/>
+                <include name="**/icudata/*ibm-1390_P110-2003.cnv*"/>
+            </fileset>
+        </delete>
+
         <!-- Merge META-INF/services from TCVN-3, icu4j-charset-slim -->
         <!-- find the icu4j-charset-slim jar -->
         <path id="icu4j-slim.found">
@@ -181,16 +221,16 @@
             <zipentry zipfile="${tcvn-3.path}" name="META-INF/services/java.nio.charset.spi.CharsetProvider"/>
         </concat>
 
-        <!-- Merge META-INF/services from PDFBOX, jpeg2000 and TwelveMonkeys -->
+        <!-- Merge META-INF/services from jbig2, jpeg2000 and TwelveMonkeys -->
         <!-- find the pdfbox jar -->
-        <path id="pdfbox.found">
+        <path id="jbig2.found">
             <first>
                 <fileset dir="${lib.dir}/">
-                    <include name="**/pdfbox*.jar"/>
+                    <include name="**/jbig2*.jar"/>
                 </fileset>
             </first>
         </path>
-        <pathconvert property="pdfbox.path" refid="pdfbox.found"/>
+        <pathconvert property="jbig2.path" refid="jbig2.found"/>
 
         <!-- find the TwelveMonkeys jar -->
         <path id="imageio-jpeg.found">
@@ -214,7 +254,7 @@
 
         <!-- merge service entries for ImageReaderSpi -->
         <concat destfile="${out.dir}/libs-temp/META-INF/services/javax.imageio.spi.ImageReaderSpi" fixlastline="true">
-            <zipentry zipfile="${pdfbox.path}" name="META-INF/services/javax.imageio.spi.ImageReaderSpi"/>
+            <zipentry zipfile="${jbig2.path}" name="META-INF/services/javax.imageio.spi.ImageReaderSpi"/>
             <zipentry zipfile="${imageio-jpeg.path}" name="META-INF/services/javax.imageio.spi.ImageReaderSpi"/>
             <zipentry zipfile="${imageio-jpeg2000.path}" name="META-INF/services/javax.imageio.spi.ImageReaderSpi"/>
         </concat>
