Switch to modern theming engine

--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -1,6 +1,7 @@
 # Dependency versions
 #darcula.version=0.0.0
 bouncycastle.version=1.82
+flatlaf.version=3.6.2
 #hid4java.version=0.8.0
 icu4j.version=77.1
 jaiimageio.version=1.4.0
