Provide `-Dsign.failonerror=false` support to the build system Closes #1373

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -21,6 +21,7 @@ build.dir=${out.dir}/build
 dist.dir=${out.dir}/dist
 
 sign.lib.dir=${out.dir}/jar-signed
+sign.failonerror=true
 
 jar.compress=true
 jar.index=true
