--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -5,7 +5,7 @@ flatlaf.version=3.6.2
 #hid4java.version=0.8.0
 icu4j.version=77.1
 jaiimageio.version=1.4.0
-javafx.version=25-headless+0-2025-02-28-100038
+javafx.version=26-ea+12
 #javasemver.version=0.9.0
 #jettison.version=1.5.4
 jbig2.version=3.0.4
