Remove Java 8 workarounds; assume Java 11+

--- a/ant/apple/apple.properties
+++ b/ant/apple/apple.properties
@@ -1,6 +1,4 @@
 # Apple build properties
 apple.packager.signid=P5DMU6659X
-# jdk9+ flags
-# - Tray icon requires workaround https://github.com/dyorgio/macos-tray-icon-fixer/issues/9
-# - Dark theme requires workaround https://github.com/bobbylight/Darcula/issues/8
-apple.launch.jigsaw=--add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-exports java.desktop/com.apple.laf=ALL-UNNAMED
+# Apple launcher options
+apple.launch.opts=
