--- a/ant/linux/linux.properties
+++ b/ant/linux/linux.properties
@@ -1,2 +1,3 @@
-# Expose UNIXToolkit.getGtkVersion
-linux.launch.jigsaw=--add-opens java.desktop/sun.awt=ALL-UNNAMED
+# Linux launcher options
+# 1. Expose UNIXToolkit.getGtkVersion
+linux.launch.opts=--add-opens java.desktop/sun.awt=ALL-UNNAMED
