--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -44,11 +44,7 @@ Section
     Call FindJava
 
     Var /GLOBAL opts
-    StrCpy $opts "${launch.opts}"
-    ; Handle jdk9+ flags
-    ${If} $java_major >= 9
-        StrCpy $opts "${launch.opts} ${launch.jigsaw}"
-    ${EndIf}
+    StrCpy $opts "${launch.opts} ${windows.launch.opts}"
 
     ; Check for user overridable launch options
     ClearErrors
