--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: qz-tray-ubuntu
+          name: qz-tray-linux-jdk${{ matrix.java }}
           path: out/qz-tray-*.run
 
   macos:
@@ -45,7 +45,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-         name: qz-tray-macos
+         name: qz-tray-macos-jdk${{ matrix.java }}
          path: out/qz-tray-*.pkg
 
   windows:
@@ -66,5 +66,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: qz-tray-windows
+          name: qz-tray-windows-jdk${{ matrix.java }}
           path: out/qz-tray-*.exe
